# compress-jpeg

./: .gitignore  Cargo.toml  README.md  build.ps1  build.sh
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: publish.yml  release.yml
src/: lib.rs
