[package]
name = "compress-jpeg"
version = "1.1.1"
edition = "2021"
description = "A simple JPEG compression library for WebAssembly"
license = "MIT"
keywords = ["jpeg", "compression", "webassembly", "rust-wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["ImageData"] }
